--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     ],
     "content_scripts": [
       {
-        "matches": ["https://chat.openai.com/c/*"],
+        "matches": ["https://chat.openai.com/"],
         "js": ["content_scripts/content_script.js"] 
       }
     ],
