--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,10 @@
   "version": "1.0",
   "description": "Generates BibLaTeX citations from chat conversations with OpenAI's ChatGPT.",
   "icons": {
-    "48": "icons/icon-48.png"
+    "16": "icons/icon-16.png",
+    "32": "icons/icon-32.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
   },
   "permissions": [
     "activeTab"
