--- a/.github/workflows/create_zip.yml
+++ b/.github/workflows/create_zip.yml
@@ -40,12 +40,12 @@ jobs:
         mv ${{ matrix.browser }}.zip workspace/zipped-extensions/
 
     - name: Commit and Push
-      uses: EndBug/add-and-commit@v7
-      with:
-        author_name: github-actions[bot]
-        author_email: 41898282+github-actions[bot]@users.noreply.github.com
-        message: 'Build ${{ matrix.browser }} extension'
-        add: 'zipped-extensions/*'
-        default_author: github_actions
-        cwd: 'workspace'
+      run: |
+        git config --local user.name "github-actions[bot]"
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git add zipped-extensions/*
+        git commit -m 'Build ${{ matrix.browser }} extension'
+        git push origin main
+      env:
+        PA_TOKEN: ${{ secrets.PA_TOKEN }}
       if: github.ref == 'refs/heads/main'
