--- a/.github/workflows/create_zip.yml
+++ b/.github/workflows/create_zip.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'browser-zipped-extesions/*'  # Replace with the actual path if needed 
+    branches-ignore:
+      - main  # Ignoring main here to avoid infinite loop
+
 
 jobs:
   build:
@@ -27,7 +32,7 @@ jobs:
         ref: ${{ matrix.browser }}
         path: ${{ matrix.browser }}
         token: ${{ secrets.PA_TOKEN }}
-        
+
     - name: Prepare extension directory
       run: |
         mkdir extension
@@ -40,8 +45,8 @@ jobs:
 
     - name: Move zip file to a separate directory
       run: |
-        mkdir -p workspace/zipped-extensions
-        mv ${{ matrix.browser }}.zip workspace/zipped-extensions/
+        mkdir -p workspace/browser-zipped-extesions
+        mv ${{ matrix.browser }}.zip workspace/browser-zipped-extesions/
 
     - name: Commit and Push
       uses: EndBug/add-and-commit@v7
@@ -49,7 +54,7 @@ jobs:
         author_name: github-actions[bot]
         author_email: 41898282+github-actions[bot]@users.noreply.github.com
         message: 'Build ${{ matrix.browser }} extension'
-        add: 'zipped-extensions/*'
+        add: 'browser-zipped-extesions/*'
         default_author: github_actions
         cwd: 'workspace'
       if: github.ref == 'refs/heads/main'
