--- a/.github/workflows/create_zip.yml
+++ b/.github/workflows/create_zip.yml
@@ -7,56 +7,90 @@ on:
       - chrome
       - firefox
     paths-ignore:
-      - 'browser-zipped-extensions/*'  # Replace with the actual path if needed 
+      - 'browser-zipped-extensions/*'
 
 jobs:
-  build:
+  build-chrome:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        browser: [chrome, firefox]
-
     steps:
     - name: Checkout main branch
       uses: actions/checkout@v2
       with:
         path: 'workspace'
         token: ${{ secrets.PA_TOKEN }}
-        
-        
 
-
-    - name: Checkout ${{ matrix.browser }} branch for manifest.json
+    - name: Checkout Chrome branch for manifest.json
       uses: actions/checkout@v2
       with:
-        ref: ${{ matrix.browser }}
-        path: ${{ matrix.browser }}
+        ref: chrome
+        path: chrome
         token: ${{ secrets.PA_TOKEN }}
 
-    - name: Prepare extension directory
+    - name: Prepare Chrome extension directory
       run: |
-        mkdir extension
-        cp -r workspace/icons workspace/scripts extension/
-        cp ${{ matrix.browser }}/manifest.json extension/
+        mkdir chrome-extension
+        cp -r workspace/icons workspace/scripts chrome-extension/
+        cp chrome/manifest.json chrome-extension/
 
-    - name: Zip extension
+    - name: Zip Chrome extension
       run: |
-        cd extension
-        zip -r ../${{ matrix.browser }}.zip icons scripts manifest.json
-        
+        cd chrome-extension
+        zip -r ../chrome.zip icons scripts manifest.json
 
-    - name: Move zip file to a separate directory
+    - name: Move Chrome zip file to a separate directory
       run: |
         mkdir -p workspace/browser-zipped-extensions
-        mv ${{ matrix.browser }}.zip workspace/browser-zipped-extensions/
+        mv chrome.zip workspace/browser-zipped-extensions/
 
-    - name: Commit and Push
+  build-firefox:
+    needs: build-chrome
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout main branch
+      uses: actions/checkout@v2
+      with:
+        path: 'workspace'
+        token: ${{ secrets.PA_TOKEN }}
+
+    - name: Checkout Firefox branch for manifest.json
+      uses: actions/checkout@v2
+      with:
+        ref: firefox
+        path: firefox
+        token: ${{ secrets.PA_TOKEN }}
+
+    - name: Prepare Firefox extension directory
+      run: |
+        mkdir firefox-extension
+        cp -r workspace/icons workspace/scripts firefox-extension/
+        cp firefox/manifest.json firefox-extension/
+
+    - name: Zip Firefox extension
+      run: |
+        cd firefox-extension
+        zip -r ../firefox.zip icons scripts manifest.json
+
+    - name: Move Firefox zip file to a separate directory
+      run: |
+        mkdir -p workspace/browser-zipped-extensions
+        mv firefox.zip workspace/browser-zipped-extensions/
+
+  commit-and-push:
+    needs: [build-chrome, build-firefox]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout main branch
+      uses: actions/checkout@v2
+      with:
+        token: ${{ secrets.PA_TOKEN }}
+
+    - name: Commit and Push zipped extensions
       uses: EndBug/add-and-commit@v7
       with:
         author_name: github-actions[bot]
         author_email: 41898282+github-actions[bot]@users.noreply.github.com
-        message: 'Build ${{ matrix.browser }} extension'
-        add: 'browser-zipped-extensions/*'
+        message: 'Build extensions'
+        add: 'workspace/browser-zipped-extensions/*'
         default_author: github_actions
         cwd: 'workspace'
       if: github.ref == 'refs/heads/main'
