--- a/.github/workflows/create_zip.yml
+++ b/.github/workflows/create_zip.yml
@@ -3,7 +3,7 @@ name: Build Zip File
 on:
   push:
     branches:
-      - main 
+      - main
       - chrome
       - firefox
     paths-ignore:
@@ -17,37 +17,32 @@ jobs:
         browser: [chrome, firefox]
 
     steps:
-    - name: Checkout main branch
+    - name: Checkout main branch to a temporary directory
       uses: actions/checkout@v2
       with:
-        path: 'workspace'
-        token: ${{ secrets.PA_TOKEN }}
-        
-    - name: Checkout ${{ matrix.browser }} branch for manifest.json
+        ref: main
+        path: temp
+
+    - name: Checkout ${{ matrix.browser }} branch to a a directory where the zip file will be created
       uses: actions/checkout@v2
       with:
         ref: ${{ matrix.browser }}
         path: ${{ matrix.browser }}
-        token: ${{ secrets.PA_TOKEN }}
 
-    - name: Prepare extension directory
-      run: |
-        mkdir extension
-        cp -r workspace/icons workspace/scripts extension/
-        cp ${{ matrix.browser }}/manifest.json extension/
+    - name: Copy scripts and icons from main branch to ${{ matrix.browser }} branch
+      run: cp -r temp/scripts ${{ matrix.browser }} && cp -r temp/icons ${{ matrix.browser }}
 
-    - name: Zip extension
-      run: |
-        zip -r ${{ matrix.browser }}.zip extension/icons extension/scripts extension/manifest.json
+    - name: Create zip file with ${{ matrix.browser }} branch contents
+      run: cd ${{ matrix.browser }} && zip -r ${{ matrix.browser }}.zip *
 
-    - name: Commit files
-      run: |
-        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
-        git commit -m "Update ${{ matrix.browser }}.zip" -a
-
-    - name: Push changes
-      uses: ad-m/github-push-action@master
+    - name: Commit and push changes to ${{ matrix.browser }} branch
+      uses: EndBug/add-and-commit@v9.1.3
       with:
-        github_token: ${{ secrets.PA_TOKEN }}
-        branch: ${{ matrix.browser }}
+        author_name: GitHub Actions
+        author_email: 123456+github-actions[bot]@users.noreply.github.com
+        message: "Update ${{ matrix.browser }} branch"
+        add: '${{ matrix.browser }}.zip'
+        push: true
+        cwd: ${{ matrix.browser }}
+
+      
