--- a/manifest.json
+++ b/manifest.json
@@ -9,17 +9,17 @@
     "48": "icons/icon-48.png",
     "128": "icons/icon-128.png"
   },
-  "permissions": [
-    "activeTab"
-  ],
   "content_scripts": [
     {
       "matches": [
         "https://chat.openai.com/",
         "https://chat.openai.com/*"
       ],
-      "js": [
-        "scripts/content.js"
+     "js": [
+        "scripts/utils.js",
+        "scripts/api.js",
+        "scripts/ui.js",
+        "scripts/main.js"
       ]
     }
   ]
