--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "ChatGPT Citation Generator",
-  "version": "1.3",
+  "version": "1.2",
   "description": "Generates BibLaTeX citations from chat conversations with OpenAI's ChatGPT.",
   "icons": {
     "16": "icons/icon-16.png",
@@ -9,17 +9,17 @@
     "48": "icons/icon-48.png",
     "128": "icons/icon-128.png"
   },
-  "permissions": [
-    "activeTab"
-  ],
   "content_scripts": [
     {
       "matches": [
         "https://chat.openai.com/",
         "https://chat.openai.com/*"
       ],
-      "js": [
-        "scripts/content.js"
+     "js": [
+        "scripts/utils.js",
+        "scripts/api.js",
+        "scripts/ui.js",
+        "scripts/main.js"
       ]
     }
   ]
