Update gecko ID in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
   ],
   "browser_specific_settings": {
     "gecko": {
-      "id": "9af8e1a2-6c2b-4d75-aeb2-c4d34d8f5a7c"
+      "id": "{9af8e1a2-6c2b-4d75-aeb2-c4d34d8f5a7c}"
     }
   }
 }
